--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Adolfo Cárdenas",
   "license": "MIT",
   "private": false,
-  "scripts":{
+  "scripts": {
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
