--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start" : "node app.js"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.8.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
