--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "private": false,
   "scripts": {
     "dev": "nodemon app.js",
-    "start" : "node app.js"
+    "start": "node app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.2"
